2012-10-15  Dana Jansens  <danakj@chromium.org>

        Layout Test plugins/update-widgets-crash.html is failing
        https://bugs.webkit.org/show_bug.cgi?id=99333

        Unreviewed gardening.

        * platform/chromium/TestExpectations:

2012-10-15  Dominik Röttsches  <dominik.rottsches@intel.com>

        Unreviewed GTK gardening.

        * platform/gtk/TestExpectations: Silencing a style-checker warning.

2012-10-15  Vsevolod Vlasov  <vsevik@chromium.org>

        Web Inspector: Scripts for dynamically added script elements are not shown in sources panel.
        https://bugs.webkit.org/show_bug.cgi?id=99324

        Reviewed by Pavel Feldman.

        * http/tests/inspector-enabled/dynamic-scripts-expected.txt: Added.
        * http/tests/inspector-enabled/dynamic-scripts.html: Added.
        * http/tests/inspector-enabled/resources/dynamic-script.js: Added.
        (fooDynamicScript):
        * inspector/debugger/dynamic-scripts-expected.txt: Added.
        * inspector/debugger/dynamic-scripts.html: Added.
        * inspector/debugger/resources/dynamic-script.js: Added.
        (fooDynamicScript):

2012-10-15  Tullio Lucena  <tullio.lucena@openbossa.org>

        [Qt] Unskip and rebase now passing tests.
        https://bugs.webkit.org/show_bug.cgi?id=98824

        Reviewed by Csaba Osztrogonác.

        Updating tests results.

        * platform/qt/TestExpectations:
        * platform/qt/editing/selection/caret-rtl-2-expected.png: Added.
        * platform/qt/editing/selection/caret-rtl-2-expected.txt:
        * platform/qt/editing/selection/caret-rtl-expected.png: Added.
        * platform/qt/editing/selection/caret-rtl-expected.txt:
        * platform/qt/editing/selection/extend-selection-bidi-expected.png: Added.
        * platform/qt/editing/selection/extend-selection-bidi-expected.txt: Added.
        * platform/qt/editing/selection/move-past-trailing-space-expected.png: Added.